# metamodule-patch-serial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  base64.hh  patch_to_yaml.cc  yaml_to_patch.cc
patch/: mapping_ids.hh  midi_def.hh  patch.hh  patch_data.hh
ryml/: ryml_init.cc  ryml_serial.cc  ryml_serial.hh
tests/: Makefile  patch_to_yaml_tests.cc  yaml_to_patch_tests.cc
